--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "ng-ckeditor": "0.2.1",
     "ckeditor": "*",
     "fng-select2": "*",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
+    "bootstrap": "~3.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3"
