--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "ckeditor": "*",
     "fng-select2": "*",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "angular-animate": "~1.3.13"
   },
   "devDependencies": {
     "angular-mocks": "^1.3"
