--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "fng-select2": "*",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
     "bootstrap": "~3.3.2",
-    "angular-animate": "~1.3.13"
+    "angular-animate": "~1.3.13",
+    "d3": "~3.5.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3"
