--- a/bower.json
+++ b/bower.json
@@ -21,13 +21,11 @@
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
     "bootstrap": "~3.3.2",
     "angular-animate": "~1.3.14",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "threejs": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.3"
   },
-  "testPath": "test/client/spec",
-  "resolutions": {
-    "angular": ">=1 <1.3.0"
-  }
+  "testPath": "test/client/spec"
 }
