--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "ckeditor": "*",
     "fng-select2": "*",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
-    "bootstrap": "~3.3.2",
+    "bootstrap": "cupofnestor/GGC-bootstrap",
     "angular-animate": "~1.3.14",
     "d3": "~3.5.5",
     "threejs": "*"
