--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "bootstrap": "cupofnestor/GGC-bootstrap",
     "angular-animate": "~1.3.14",
     "d3": "~3.5.5",
-    "threejs": "*"
+    "threejs": "*",
+    "angular-audio": "~1.6.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3"
