--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-audio": "~1.6.2"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3"
+    "angular-mocks": "^1.3",
+    "angular-ui-grid": "~3.0.0-rc.20"
   },
   "testPath": "test/client/spec"
 }
