--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-animate": "~1.3.14",
     "d3": "~3.5.5",
     "threejs": "*",
-    "angular-audio": "~1.6.2"
+    "angular-audio": "~1.6.2",
+    "angular-ui-router.stateHelper": "~1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3",
