--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ public
 .idea
 client/bower_components
 dist
+cache
+build
+NWbuild
 /server/config/local.env.js
 .idea
 *.log
@@ -16,3 +19,7 @@ client/app/vars.css
 *.old.webm
 
 *.webm
+
+client/app/game/end.html
+
+client/vid
