--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ggc",
   "version": "0.0.0",
-  "main": "server/app.js",
+  "main": "app/index.html",
   "dependencies": {
     "express": "~4.9.0",
     "morgan": "~1.0.0",
@@ -47,6 +47,7 @@
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
     "grunt-node-inspector": "~0.1.5",
+    "grunt-node-webkit-builder": "^1.0.2",
     "grunt-nodemon": "~0.2.0",
     "grunt-open": "~0.2.3",
     "grunt-protractor-runner": "^1.1.0",
