--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ggc",
   "version": "0.0.0",
-  "main": "app/index.html",
+  "main": "public/NWIndex.html",
+  "node-main": "server/app.js",
   "dependencies": {
     "express": "^4.9.0",
     "morgan": "^1.0.0",
@@ -56,6 +57,7 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.8.0",
+    "imagemin-gifsicle": "^4.2.0",
     "jit-grunt": "^0.5.0",
     "jshint-stylish": "^0.1.5",
     "karma": "^0.12.9",
