--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "fng-select2": "*",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
     "bootstrap": "cupofnestor/GGC-bootstrap",
-    "angular-animate": "~1.3.14",
+    "angular-animate": "~1.4.3",
     "d3": "~3.5.5",
     "threejs": "*",
     "angular-audio": "~1.6.2",
@@ -30,5 +30,8 @@
     "angular-mocks": "^1.3",
     "angular-ui-grid": "~3.0.0-rc.20"
   },
-  "testPath": "test/client/spec"
+  "testPath": "test/client/spec",
+  "resolutions": {
+    "angular-animate": "~1.4.3"
+  }
 }
