--- a/bower.json
+++ b/bower.json
@@ -27,8 +27,7 @@
     "angular-ui-router.stateHelper": "~1.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3",
-    "angular-ui-grid": "~3.0.0-rc.20"
+    "angular-mocks": "^1.3"
   },
   "testPath": "test/client/spec",
   "resolutions": {
