Button Lockout and indicator

--- a/client/app/config.json
+++ b/client/app/config.json
@@ -18,6 +18,7 @@
     "eventChance":1,
     "rounds": 3,
     "balanceThreshold":3,
+    "warnThreshold":6,
     "initialScores":{
       "environment":1,
       "economy":4,
